fix extra paddings

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -5,8 +5,7 @@
 .hero {
   position: relative;
   overflow: hidden;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 8px;
 }
 
 .hero .container {
@@ -114,7 +113,6 @@
 @media screen and (min-width: 768px) {
   .hero {
     padding-top: 32px;
-    padding-bottom: 32px;
   }
 
   .hero-content {
@@ -180,10 +178,6 @@
 @media screen and (min-width: 1280px) {
   .hero {
     padding-top: 16px;
-    padding-bottom: 16px;
-  }
-
-  .hero.section {
     padding-bottom: 96px;
   }
 
